--- a/frontend/editorial_chavez_demo_app/src/App.css
+++ b/frontend/editorial_chavez_demo_app/src/App.css
@@ -5,6 +5,11 @@
   text-align: center;
 }
 
+body{
+  background: rgb(2,0,36);
+  background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 35%, rgba(0,212,255,1) 100%);
+}
+
 .logo {
   height: 6em;
   padding: 1.5em;
@@ -39,4 +44,13 @@
 
 .read-the-docs {
   color: #888;
+}
+
+.container{
+  height: 300px;
+}
+
+img{
+  height: 350px;
+  object-fit: cover;
 }
