--- a/frontend/editorial_chavez_demo_app/src/index.css
+++ b/frontend/editorial_chavez_demo_app/src/index.css
@@ -25,10 +25,15 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
+}
+
+#root{
+  display: flex;
+  place-items: center;
+  text-align: center;
+  height: 100vh;
 }
 
 h1 {
