--- a/frontend/editorial_chavez_demo_app/src/App.css
+++ b/frontend/editorial_chavez_demo_app/src/App.css
@@ -33,8 +33,8 @@ img{
   header{
     flex-direction: column;
   }
-
-  header #nav, header #form-search {
-    /* margin-block: 1px; */
+  
+  .book{
+    width: 200px;
   }
 }
