50. styles: sizing main section component and his children.

--- a/frontend/editorial_chavez_demo_app/src/App.css
+++ b/frontend/editorial_chavez_demo_app/src/App.css
@@ -28,6 +28,14 @@ img{
   height: 8vh;
 }
 
+.main-section{
+  height: 70%;
+}
+
+.main-section  > *{
+  height: 100%;
+}
+
 /* Custom media queries */
 @media (max-width: 575px) {
   header{
