--- a/frontend/editorial_chavez_demo_app/src/App.css
+++ b/frontend/editorial_chavez_demo_app/src/App.css
@@ -36,6 +36,10 @@ img{
   height: 100%;
 }
 
+.comment-section{
+  height: 25%;
+}
+
 /* Custom media queries */
 @media (max-width: 575px) {
   header{
