53. styles: making responsive main section containers

--- a/frontend/editorial_chavez_demo_app/src/App.css
+++ b/frontend/editorial_chavez_demo_app/src/App.css
@@ -53,4 +53,13 @@ textarea{
   .book{
     width: 200px;
   }
+
+  .main-section > div:first-child{
+    height: 50%;
+  }
+
+  .main-section > div:last-child{
+    height: 50%;
+  }
+
 }
